--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  get_it: ^5.0.1
+  flutter_bloc: ^6.1.1
+  equatable: ^1.2.5
+  dartz: ^0.9.2
+  connectivity: ^2.0.2
+  http: ^0.12.2
+  shared_preferences: ^0.5.12+4
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  mockito: ^4.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
